# test-python

./: .gitignore  README.md  cog.toml  flake.nix  pyproject.toml
.github/.workflows/: release.yaml
.github/workflows/: artifactory_release.yaml  pull_requests.yaml  release.yaml
src/sfy_python_template/: __main__.py  cli.py
src/sfy_python_template/package_a/: __init__.py  commands.py
src/sfy_python_template/package_b/: __init__.py  commands.py
tests/: test_architecture.py  test_cli.py
